Warsztaty zrobione do sekcji 4 wlacznie

--- a/index.html
+++ b/index.html
@@ -49,20 +49,49 @@
         <div class="container section2-content">
             <h2>The most popular sales platform in country</h2>
             <div class="section2-content-box">
-                <div class="section2-box1">
-                    <div></div>
+                <div class="section2-box">
+                    <div><img src="pictures/Person.svg"></div>
                     <p>100000+</p>
                     <p>daily entries</p>
                 </div>
-                <div class="section2-box2">
-                    <div></div>
-                    <p>100000+</p>
-                    <p>daily entries</p>
+                <div class="section2-box">
+                    <div><img src="pictures/Eye.svg"></div>
+                    <p>2000000+</p>
+                    <p>seen products every day</p>
                 </div>
-                <div class="section2-box3">
-                    <div></div>
-                    <p>100000+</p>
-                    <p>daily entries</p>
+                <div class="section2-box">
+                    <div><img src="pictures/Catalog.svg"></div>
+                    <p>10000+</p>
+                    <p>added posts daily</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section3">
+        <div class="container section3-content">
+            <div class="section3-box1 clearfix container2">
+                <div></div>
+                <img src="pictures/Macbook.png">
+                <h1>Be always first</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <span></span>
+            </div>
+            <div class="section3-box2 clearfix container2">
+                <div></div>
+                <img src="pictures/iPhone.png">
+                <h1>Your shop is where you are!</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <span></span>
+            </div>
+            <div class="section3-box3 container2">
+                <div class="section3-box3-1">
+                    <h1>Increase recognition your brand!</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <span></span>
+                </div>
+                <div class="section3-box3-2">
+                    <img src="pictures/Trumpet.png">
+
                 </div>
             </div>
         </div>
