Warsztaty zrobione do sekcji 5 + poprawione menu

--- a/index.html
+++ b/index.html
@@ -69,20 +69,20 @@
     </section>
     <section class="section3">
         <div class="container section3-content">
-            <div class="section3-box1 clearfix container2">
+            <div class="section3-box1 container2">
                 <div></div>
                 <img src="pictures/Macbook.png">
                 <h1>Be always first</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                 <span></span>
             </div>
-            <div class="section3-box2 clearfix container2">
-                <div></div>
-                <img src="pictures/iPhone.png">
-                <h1>Your shop is where you are!</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                <span></span>
-            </div>
+                <div class="section3-box2 container2">
+                    <div></div>
+                    <img src="pictures/iPhone.png">
+                    <h1>Your shop is where you are!</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <span></span>
+                </div>
             <div class="section3-box3 container2">
                 <div class="section3-box3-1">
                     <h1>Increase recognition your brand!</h1>
@@ -91,8 +91,47 @@
                 </div>
                 <div class="section3-box3-2">
                     <img src="pictures/Trumpet.png">
-
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="section4">
+
+        <div class="container section4-content">
+            <h1>Pricing</h1>
+            <div class="section4-box-content">
+            <div class="section4-box1">
+                <h2>Basic</h2>
+                <p>$0</p>
+                <p><span></span>100 MB HDD</p>
+                <p><span></span>1 Subdomain</p>
+                <p><span></span>2 E-mails</p>
+                <p><span></span>Two years license</p>
+                <p><span></span>Full support</p>
+                <a href="#">Begin</a>
+            </div>
+            <div class="section4-box2">
+                <h2>Professional</h2>
+                <p>$25</p>
+                <span>Limited offer</span>
+                <p><span></span>500 MB HDD</p>
+                <p><span></span>2 Subdomains</p>
+                <p><span></span>5 E-mails</p>
+                <p><span></span>One year license</p>
+                <p><span></span>Full support</p>
+                <a href="#">Begin</a>
+            </div>
+            <div class="section4-box3">
+                <h2>Premium</h2>
+                <p>$60</p>
+                <span>Limited offer</span>
+                <p><span></span>2 GB HDD</p>
+                <p><span></span>5 Subdomains</p>
+                <p><span></span>20 E-mails</p>
+                <p><span></span>Two years license</p>
+                <p><span></span>Full support</p>
+                <a href="#">Begin</a>
+            </div>
             </div>
         </div>
     </section>
