--- a/index.html
+++ b/index.html
@@ -135,6 +135,28 @@
             </div>
         </div>
     </section>
+    <section class="section5">
+        <div class="container section5-content">
+            <div class="section5-text">
+                <h1>Any questions?</h1>
+                <p>Leave your email address or call us!</p>
+                <div>
+                <img src="pictures/Mail%20Icon.svg"><span>info@bestshop.xyz</span>
+                    <img src="pictures/Phone%20Icon.svg"><span>123 456 789</span>
+                </div>
+            </div>
+            <div class="section5-form">
+                <form class="clearfix">
+                    <label for="name">NAME</label>
+                    <input id="name" type="text">
+                    <label for="email">EMAIL</label>
+                    <input id="email">
+                    <input type="checkbox" name="accept"><p>I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</p>
+                    <button>Send</button>
+                </form>
+            </div>
+        </div>
+    </section>
 </main>
 
 <footer>
