--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="UTF-8">
-    <title>Best Shop</title>
+    <title>BestShop</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -160,8 +160,16 @@
 </main>
 
 <footer>
-
-
+    <div class="container section-footer">
+        <div class="left-footer">
+            <h1>BestShop</h1>
+            <p>© 2019 BestShop LTD, All Rights Reserved</p>
+        </div>
+        <div class="right-footer">
+            <a href="#"><img src="pictures/Twitter.svg"></a>
+            <a href="#"><img src="pictures/Facebook.svg"></a>
+        </div>
+    </div>
 </footer>
 
 </body>
