Dodane formatowanie chekbox-a poprawa wygladu strony

--- a/index.html
+++ b/index.html
@@ -67,21 +67,28 @@
             </div>
         </div>
     </section>
+
     <section class="section3">
         <div class="container section3-content">
             <div class="section3-box1 container2">
-                <div></div>
-                <img src="pictures/Macbook.png">
+                <section class="clearfix">
+                    <div></div>
+                    <img src="pictures/Macbook.png">
+                </section>
                 <h1>Be always first</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                 <span></span>
             </div>
-                <div class="section3-box2 container2">
-                    <div></div>
-                    <img src="pictures/iPhone.png">
-                    <h1>Your shop is where you are!</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                    <span></span>
+                <div class="section3-box2 clearfix container2">
+                    <section class="clearfix">
+                        <div></div>
+                        <img src="pictures/iPhone.png">
+                    </section>
+                    <section>
+                        <h1>Your shop is where you are!</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                         <span></span>
+                    </section>
                 </div>
             <div class="section3-box3 container2">
                 <div class="section3-box3-1">
@@ -95,6 +102,7 @@
             </div>
         </div>
     </section>
+
     <section class="section4">
 
         <div class="container section4-content">
@@ -135,6 +143,7 @@
             </div>
         </div>
     </section>
+
     <section class="section5">
         <div class="container section5-content">
             <div class="section5-text">
@@ -151,7 +160,11 @@
                     <input id="name" type="text">
                     <label for="email">EMAIL</label>
                     <input id="email">
-                    <input type="checkbox" name="accept"><p>I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</p>
+                    <div class="section5-checkbox">
+                        <input type="checkbox" name="accept">
+                        <span class="section5-checkbox-thick"></span>
+                    </div>
+                    <p>I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</p>
                     <button>Send</button>
                 </form>
             </div>
