Poprawione wyswietlanie i zrobione menu

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         </div>
             <ul class="list__navigation unvisible">
                 <li>
-                    <a href="#">WHY US</a>
+                    <a href="#why">WHY US</a>
                 </li>
                 <li>
-                    <a href="#">BENEFITS</a>
+                    <a href="#benefits">BENEFITS</a>
                 </li>
                 <li>
-                    <a href="#">PRICES</a>
+                    <a href="#prices">PRICES</a>
                 </li>
                 <li>
-                    <a href="#">CONTACT</a>
+                    <a href="#contact">CONTACT</a>
                 </li>
             </ul>
     </div>
@@ -39,7 +39,7 @@
 
 <main>
 
-    <section class="section1">
+    <section class="section1" id="why">
         <div class="container section1-content">
             <h1>Sell More!</h1>
             <p>Open shop on our platform and increase your sales</p>
@@ -47,7 +47,7 @@
         </div>
     </section>
 
-    <section class="section2">
+    <section class="section2" id="benefits">
         <div class="container section2-content">
             <h2>The most popular sales platform in country</h2>
             <div class="section2-content-box">
@@ -70,7 +70,7 @@
         </div>
     </section>
 
-    <section class="section3">
+    <section class="section3" id="prices">
         <div class="container section3-content">
             <div class="section3-box1 container2">
                 <section class="clearfix">
@@ -146,7 +146,7 @@
         </div>
     </section>
 
-    <section class="section5">
+    <section class="section5" id="contact">
         <div class="container section5-content">
             <div class="section5-text">
                 <h1>Any questions?</h1>
